--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/jwt-decode": "^2.2.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "primeicons": "^1.0.0",
     "primeng": "^7.1.0",
     "rxjs": "~6.3.3",
