--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,9 @@
             "styles": [
               "src/styles.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
-              "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css",            
-              "node_modules/primeng/resources/themes/bootstrap/theme.css"
+              "node_modules/primeng/resources/themes/nova-light/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
